Add reference to media query stylesheet

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bernard</title>
   <link href="node_modules/bootswatch/flatly/bootstrap.min.css" type="text/css" rel="stylesheet" />
-  <link href="assets/css/styles.css" type="text/css" rel="stylesheet" />
+  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" media="(max-width:600px)" href="assets/css/styles-small.css">
+  <link rel="stylesheet" media="(min-width:601px)" href="assets/css/styles-large.css">
 </head>
 <body>
   <div class="container">
