Add Media Query Style

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 <body>
   <div class="container">
     <h1>VIX World</h1>
+    <article>Test for article</article>
     <!--
     <div class="map-overlay">
       <canvas id="myChart" width="200" height="50"></canvas>
     </div>
   -->
-    <div id="myPlotly" style="width:600px; height:400px;"></div>
+    <div id="myPlotly" class="chart"></div>
 <!--
     <div class="map-overlay">
       <canvas id="myChartQuandl" width="600" height="100"></canvas>
