--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>VIX World</h1>
+    <h1>VIX World test 2</h1>
     <article>Test for article</article>
     <!--
     <div class="map-overlay">
